--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a href="#page-top" class="nav-link">Home</a>
+                            <a href="#hero" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#members" class="nav-link">Members</a>
@@ -42,19 +42,19 @@
     <main>
         <!-- Hero Section -->
         <section class="hero-section center" id="hero">
-            <div class="container-fluid hero-content center">
+            <div class="container-fluid hero-content pt-3 center">
                 <div class="row center flex-column">
-                    <div class="col-lg-4 col-md-6 col-sm-12 -lg-start p-4 hero-text">
-                        <h1 class="fw-bold font-haikyu text-center text-black">HAIKYUU!!</h1>
+                    <div class="col-lg-4 col-md-6 col-sm-12 -lg-start hero-text center flex-column logo">
+                        <img src="assets/img/logo.png" class="img-fluid" alt="Haikyuu Logo">
                         <p class="lead text-light text-justify text-center">Welcome to the world of high school
                             volleyball, where
                             determination
                             meets passion.</p>
                         <a href="#overview" class="center text-decoration-none">
-                            <button class="btn btn-warning opacity-75 border-black btn-lg w-50">Explore Now</button>
+                            <button class="btn btn-warning opacity-75 border-black btn-lg">Explore Now</button>
                         </a>
                     </div>
-                    <div class="col-lg-8 col-md-6 col-sm-12 p-0">
+                    <div class="col-lg-8 col-md-6 col-sm-12 p-0 pt-3">
                         <div class="hero-img center">
                             <img src="assets/img/hero-img.png" alt="Haikyu Image" class="img-fluid">
                         </div>
