--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container">
-                <a href="#" class="navbar-brand font-haikyu logo d-flex">
-                    <h3 class="text-orange fw-bold me-2">Fly High!</h3>
-                    <h3 class="fw-bold text-light">Haikyuu!!</h3>
+                <a href="#" class="navbar-brand logo">
+                    <img src="assets/img/flip3.png" class="img-fluid py-0" alt="">
+                    <span class="text-light font-haikyu mx-2">x</span>
+                    <img src="assets/img/logo.png" class="img-fluid" alt="">
                 </a>
                 <button class="navbar-toggler m-1 bg-orange" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav">
@@ -283,7 +284,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center footer">
-                    <p class="font-haikyu text-dark">&copy; 2024 Haikyuu!! Fan Page | Designed by <u>Flipped</u></p>
+                    <p class="font-haikyu text-dark">&copy; 2024 Haikyuu!! Fan Page | Designed by <u>Flip</u></p>
                 </div>
             </div>
         </div>
